# CoindPay

./: .gitignore  .prettierrc.js  LICENSE  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: Metis.md
scripts/db/: mongodb.mjs
src/components/aceternity-ui/: animated-tooltip.tsx  aurora-background.tsx  container-scroll-animation.tsx  flip-words.tsx  glare-card.tsx  macbook-scroll.tsx  meteors.tsx  placeholders-and-vanish-input.tsx  sparkles.tsx  text-reveal-card.tsx  typewriter-effect.tsx  world-map.tsx
src/components/card-group/: qr-code.tsx
src/components/context/: index.tsx  payee.ts  temp.tsx  utils.tsx
src/config/: index.ts
src/config/bio/: card.ts  label.ts  media.ts  templates.ts
src/config/common/: apps.ts  pay.ts  social.ts  wagmi.ts
src/config/server/: aws.ts
src/contracts/solana/: .gitignore  Anchor.toml  Cargo.toml
src/contracts/solana/programs/coindpay/: Cargo.toml
src/contracts/solana/programs/coindpay/src/: lib.rs
src/lib/: encode.ts  fetcher.ts  gtag.ts  solana.ts  store.ts  utils.ts
src/lib/api/: cache.tsx  common.ts
src/lib/aws/: config.ts  index.ts
src/lib/chains/: custom.ts  identity.ts  index.ts  logo.ts  (+6 more)
src/middlewares/: index.ts
src/pages/: 404.tsx  500.tsx  [uuid].tsx  _app.tsx  index.tsx
src/services/: common.ts  pay.ts  s3.ts  studio.ts  upload.ts  user.ts
src/styles/: cropper.scss  iconfont.scss  iframely.scss  index.scss  mixins.scss  mui.scss  page.scss  plyr.scss  preflight.scss  reset.scss  swiper.scss  theme.scss  wallet.scss
(+123 files in other folders)
