[package]
name = "coindpay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "coindpay"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
# Anchor framework and related libraries

solana-program = "1.9.14"

anchor-spl = "0.30.1"
anchor-lang = "0.30.1"

spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
